<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4pt"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="4pt"
        android:layout_marginRight="4pt"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:layout_marginRight="4pt"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4pt"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:text="@string/register_new_account"/>


</LinearLayout>